Stream processor now makes sure there is no unrecognized operator. Concatenated hitting operators to remove unused resources.